--- a/public/index.html
+++ b/public/index.html
@@ -185,8 +185,7 @@ alias  别名 给路由起个名</code></pre><h2 id="404页面"><a href="#404页
 
             </main>
             <div class="copyright">
-  <div class="text">Powered By Hexo | Theme Tsu &copy 2020 jscheng
-  </div>
+  <div class="text">Powered By Hexo | Theme Tsu &copy 2020 jscheng</div>
 </div>
 
         </div>
